--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,5 +4,11 @@
 
 .app{
     display: grid;
-    grid-template-rows: 10% auto 1fr;
+    grid-template-rows: 15% auto 1fr;
+}
+
+@media screen and (max-width: 768px){
+    .app{
+        grid-template-rows: 10% auto 1fr;
+    }
 }
